--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,36 +4,20 @@
   become: true
   tasks:
 
-  - name: update repository index for Ubuntu
+  - name: install apache and php for Ubuntu servers
     apt:
-      update_cache: yes
-    when: ansible_distribution_version == "Ubuntu"
-
-  - name: install apache2 package for Ubuntu
-    apt:
-      name: apache2
+      name:
+        - apache2
+        - libapache2-mod-php
       state: latest
+      update_cache: yes
     when: ansible_distribution == "Ubuntu"
 
-  - name: add php support for apache for Ubuntu
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: update repository index for CentOS
+  - name: install apache and php for CentOS servers
     dnf:
+      name:
+        - httpd
+        - php
+      state: latest
       update_cache: yes
-    when: ansible_distribution_version == "CentOS"
-
-  - name: install php package for CentOS
-    dnf:
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: add php support for apache for CentOS
-    dnf:
-      name: php
-      state: latest
     when: ansible_distribution == "CentOS"
